--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -6,6 +6,22 @@
 
 <h3>Comments</h3>
 {{#each post.comments}}
-  <p>{{this.content}}</p>
-  <p>By: {{this.user.username}}</p>
+  <div class="comment">
+    <p>{{this.content}}</p>
+    <p>By: {{this.user.username}}</p>
+    <p>Date: {{this.createdAt}}</p>
+  </div>
 {{/each}}
+
+{{#if user}}
+  <h3>Add a Comment</h3>
+  <form id="comment-form">
+    <div class="form-group">
+      <label for="content">Comment</label>
+      <textarea id="content" name="content" required></textarea>
+    </div>
+    <button type="submit">Submit Comment</button>
+  </form>
+{{else}}
+  <p>Please <a href="/login">log in</a> to leave a comment.</p>
+{{/if}}
