--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!-- views/layouts/main.handlebars -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,6 +13,7 @@
       </ul>
     </nav>
   </header>
-  {{> body}}
+  {{{body}}} <!-- Use triple curly braces for unescaped content -->
 </body>
 </html>
+
