--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,3 @@
-<!-- views/login.handlebars -->
 <h2>Login</h2>
 <form id="login-form">
   <div class="form-group">
@@ -6,8 +5,9 @@
     <input type="text" id="username" name="username" required>
   </div>
   <div class="form-group">
-    <label for="password">Password</label>
+    <label for "password">Password</label>
     <input type="password" id="password" name="password" required>
   </div>
   <button type="submit">Login</button>
 </form>
+
