--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,3 @@
-<!-- views/post.handlebars -->
 <h2>{{post.title}}</h2>
 <p>Author: {{post.user.username}}</p>
 <p>Date: {{post.createdAt}}</p>
@@ -17,7 +16,7 @@
   <h3>Add a Comment</h3>
   <form id="comment-form">
     <div class="form-group">
-      <label for="content">Comment</label>
+      <label for "content">Comment</label>
       <textarea id="content" name="content" required></textarea>
     </div>
     <button type="submit">Submit Comment</button>
@@ -25,3 +24,4 @@
 {{else}}
   <p>Please <a href="/login">log in</a> to leave a comment.</p>
 {{/if}}
+
