added css styling to handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Add your head content here -->
+  <link rel="stylesheet" href="/tech-blog/public/assets/css/style.css">
 </head>
 <body>
   <header>
@@ -9,6 +9,7 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="/login">Login</a></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
     </nav>
