--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,12 +13,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
+                {{#if user}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                {{else}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Login</a>
+                    </li>
+                {{/if}}
             </ul>
         </nav>
         <a href="/" class="website-title">Tech Blog</a>
