setup signup path

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <h2>Login</h2>
+    <h2>Sign Up</h2>
     <form id="login-form">
         <div class="form-group">
             <label for="username">Username</label>
@@ -15,10 +14,8 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit">Signup</button>
     </form>
-    <p>Don't have an account? <a href="/signup">Sign up</a></p>
+    <p><a href="/login">Login instead</a></p>
 </body>
 </html>
-
-
