--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
                     </li>
                 {{else}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                 {{/if}}
             </ul>
