--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +5,7 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form id="login-form">
+    <form id="login-form" method="POST" action="/login">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
@@ -20,5 +19,7 @@
     <p>Don't have an account? <a href="/signup">Sign up</a></p>
 </body>
 </html>
+
+
 
 
