--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Sign Up</h2>
-    <form id="login-form">
+    <form id="signup-form" method="POST" action="/signup">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
