fixed logout route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
                 </li>
                 {{#if user}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" href="/logout" id="logout-button">Logout</a>
                     </li>
                 {{else}}
                     <li class="nav-item">
