--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,16 +1,28 @@
-
 {{#if user}}
-  <h2>Welcome, {{user.username}}!</h2>
-  <h3>Your Posts</h3>
-  <ul>
-    {{#each user.posts}}
-      <li>
-        <a href="/post/{{id}}">{{title}}</a>
-        <button data-id="{{id}}" class="delete-post">Delete</button>
-      </li>
-    {{/each}}
-  </ul>
+<ul>
+  {{#each user.posts}}
+  <li>
+    <a href="/post/{{id}}">{{title}}</a>
+    <button data-id="{{id}}" class="delete-post">Delete</button>
+    <button data-id="{{id}}" class="edit-post">Edit</button>
+  </li>
+  {{/each}}
+</ul>
+
+<h3>Create a New Post</h3>
+<form id="create-post-form">
+  <div class="form-group">
+    <label for="post-title">Title</label>
+    <input type="text" id="post-title" name="title" required>
+  </div>
+  <div class="form-group">
+    <label for="post-content">Content</label>
+    <textarea id="post-content" name="content" required></textarea>
+  </div>
+  <button type="submit">Create Post</button>
+</form>
 {{else}}
-  <p>Please <a href="/login">log in</a> to view your dashboard.</p>
+<p>Please <a href="/login">log in</a> to view your dashboard.</p>
 {{/if}}
+
 
