--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,16 +1,17 @@
 {{#if user}}
 <ul>
-  {{#each user.posts}}
-  <li>
-    <a href="/post/{{id}}">{{title}}</a>
-    <button data-id="{{id}}" class="delete-post">Delete</button>
-    <button data-id="{{id}}" class="edit-post">Edit</button>
-  </li>
-  {{/each}}
+{{#each posts}}
+  <div class="post-card">
+    <h2>{{title}}</h2>
+    <p>{{content}}</p>
+    <p>Author: {{user.username}}</p>
+    <p>Date: {{createdAt}}</p>
+  </div>
+{{/each}}
 </ul>
 
 <h3>Create a New Post</h3>
-<form id="create-post-form">
+<form id="create-post-form" method="POST" action="/create">
   <div class="form-group">
     <label for="post-title">Title</label>
     <input type="text" id="post-title" name="title" required>
@@ -19,7 +20,7 @@
     <label for="post-content">Content</label>
     <textarea id="post-content" name="content" required></textarea>
   </div>
-  <button type="submit">Create Post</button>
+  <button type="submit" href="/create">Create Post</button>
 </form>
 {{else}}
 <p>Please <a href="/login">log in</a> to view your dashboard.</p>
