--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,11 @@
 
 {{#each posts}}
+<div class="container">
   <div class="post-card">
     <h2>{{title}}</h2>
     <p>{{content}}</p>
     <p>Author: {{user.username}}</p>
     <p>Date: {{createdAt}}</p>
   </div>
+</div>
 {{/each}}
