--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,12 +37,21 @@ header nav ul li a {
   font-size: 18px; /* Font size for the links */
 }
 
+.container {
+  display: flex;
+  flex-wrap: wrap; /* Wrap the items to the next row when the container is full */
+  justify-content: center; /* Center items horizontally */
+}
+
 /* Add styles to format post cards */
 .post-card {
   border: 1px solid #ccc;
   padding: 10px;
   margin: 10px 0;
   background-color: #f9f9f9;
+  width: 500px;
+  box-sizing: border-box;
+  justify-content: center;
 }
 
 /* Add styles to format the comment section in the post view */
