working on routes and pages for comments and updating posts

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
       <p>Author: {{user.username}}</p>
       <p>Date: {{createdAt}}</p>
       <button class="btn btn-danger delete-post" data-id="{{id}}" method="DELETE" action="/delete/{{id}}">Delete Post</button>
-      <button class="btn btn-primary update-post" data-id="{{id}}" method="GET" action="/edit/{{id}}">Update Post</button>
+      <button class="btn btn-primary update-post" data-id="{{id}}" method="GET" action="/update/{{id}}">Update Post</button>
     </div>
     {{/each}}
   </ul>
