--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Update Post</h1>
-  <form id="update-post-form" method="POST" action="/update/submit/{{post.id}}">
+  <form id="update-post-form" method="POST" action="/edit/{{post.id}}">
     <div class="form-group">
       <label for="post-title">Title</label>
       <input type="text" id="post-title" name="title" required value="{{post.title}}">
