--- a/views/create-comment.handlebars
+++ b/views/create-comment.handlebars
@@ -13,11 +13,11 @@
             <textarea id="comment-content" name="content" required></textarea>
         </div>
         <div class="form-group">
-            <input type="hidden" name="postId" value="{{id}}">
+            <input type="hidden" name="postId" value="{{post.id}}">
         </div>
         <button type="submit">Create Comment</button>
     </form>
-    <a href="/post/{{id}}">Back to Post</a>
+    <a href="/post/{{post.id}}">Back to Post</a>
 </body>
 
 </html>
