--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-
 <head>
   <title>Update Post</title>
 </head>
 
-<body>
+
   <h1>Update Post</h1>
-  <form id="update-post-form" method="POST" action="/edit/{{id}}">
+  <form id="update-post-form">
     <div class="form-group">
       <label for="post-title">Title</label>
       <input type="text" id="post-title" name="title" required value="{{post.title}}">
@@ -17,7 +14,7 @@
       <textarea id="post-content" name="content" required>{{post.content}}</textarea>
     </div>
     <button type="submit">Update Post</button>
+    <button type="delete">Delete Post</button>
   </form>
-</body>
 
-</html>
+    <script src="/assets/js/update-post.js"></script> 
