debugging update and delete functions

--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -14,7 +14,7 @@
       <textarea id="post-content" name="content" required>{{post.content}}</textarea>
     </div>
     <button type="submit">Update Post</button>
-    <button type="delete">Delete Post</button>
+    <button id="deletepost">Delete Post</button>
   </form>
 
     <script src="/assets/js/update-post.js"></script> 
