--- a/views/create-comment.handlebars
+++ b/views/create-comment.handlebars
@@ -3,14 +3,15 @@
 </head>
 
     <h2>Create a Comment</h2>
-    <form id="create-comment-form" method="POST" action="/comment/create">
+    <form id="create-comment-form">
         <div class="form-group">
             <label for="comment-content">Content</label>
             <textarea id="comment-content" name="content" required></textarea>
         </div>
         <div class="form-group">
-            <input type="hidden" name="postId" value="{{post.id}}">
+            <input type="hidden" name="postId" value="{{id}}">
         </div>
         <button type="submit">Create Comment</button>
     </form>
-    <a href="/post/{{post.id}}">Back to Post</a>
+
+    <script src="/public/assets/js/add-comment.js"></script>
