--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,21 +6,18 @@
     <p>{{content}}</p>
     <p>Author: {{user.username}}</p>
     <p>Date: {{createdAt}}</p>
-
     <!-- Check if comments exist for the post -->
     {{#if comments.length}}
-    <h3>Comments</h3>
-    <ul>
-      {{#each comments}}
-        <li>
-          {{content}}
-          <p>Author: {{user.username}}</p>
-          <p>Date: {{createdAt}}</p>
-        </li>
-      {{/each}}
-    </ul>
+      <div class="comments-container">
+        {{#each comments}}
+          <div class="comment">
+            <p>{{content}}</p>
+            <p>Author: {{user.username}}</p>
+            <p>Date: {{createdAt}}</p>
+          </div>
+        {{/each}}
+      </div>
     {{/if}}
-
   </div>
 </div>
 {{/each}}
